--- a/BlazorScraper/Pages/Scraper.razor
+++ b/BlazorScraper/Pages/Scraper.razor
@@ -1,73 +1,12 @@
 ﻿@page "/Scraper"
-@using System;
-@using System.Collections.Generic;
-@using OpenQA.Selenium;
-@using OpenQA.Selenium.Chrome;
-@using OpenQA.Selenium.Support.UI;
-@using HtmlAgilityPack;
-@using System.Linq;
 
 <h1>Scraper Page</h1>
 <h2>click a method of Scrape.</h2>
 
 <h3>Scape!!</h3>
 <div class="container">
-    <button class="btn btn-primary" @onclick="Login">Click me</button>
+    <button class="btn btn-primary" href="RestSharp">Rest Sharp</button>
 </div>
 
-@code{
-    public static void Login()
-    {
-        ChromeOptions option = new ChromeOptions();
-        option.AddArgument("--headless");
-        option.AddArgument("window-size=1200,1100");
-
-        using (IWebDriver driver = new ChromeDriver(option))
-        {
-            driver.Navigate().GoToUrl("https://finance.yahoo.com");
-
-            WebDriverWait waitSignIn = new WebDriverWait(driver, TimeSpan.FromSeconds(25));
-            waitSignIn.Until(SeleniumExtras.WaitHelpers.ExpectedConditions.ElementToBeClickable(By.Id("uh-signedin")));
-
-            IWebElement signIn = driver.FindElement(By.Id("uh-signedin"));
-            signIn.Click();
-
-            WebDriverWait waitLogin = new WebDriverWait(driver, TimeSpan.FromSeconds(25));
-            waitLogin.Until(SeleniumExtras.WaitHelpers.ExpectedConditions.ElementToBeClickable(By.Id("login-username")));
-
-            IWebElement LoginField = driver.FindElement(By.Id("login-username"));
-            LoginField.SendKeys("jfdoyle_iii");
-            LoginField.SendKeys(Keys.Enter);
-
-            WebDriverWait waitPassword = new WebDriverWait(driver, TimeSpan.FromSeconds(25));
-            waitPassword.Until(SeleniumExtras.WaitHelpers.ExpectedConditions.ElementToBeClickable(By.Id("login-passwd")));
 
 
-            IWebElement passwordField = driver.FindElement(By.Id("login-passwd"));
-            passwordField.SendKeys("m93Fe8YHn");
-            passwordField.SendKeys(Keys.Enter);
-
-
-
-            driver.Navigate().GoToUrl("https://finance.yahoo.com/portfolio/p_2/view/v1");
-            WebDriverWait waitStockTable = new WebDriverWait(driver, TimeSpan.FromSeconds(25));
-            waitStockTable.Until(SeleniumExtras.WaitHelpers.ExpectedConditions.ElementExists(By.XPath("//table")));
-
-
-            HtmlDocument financePage = new HtmlDocument();
-            financePage.LoadHtml(driver.PageSource);
-
-
-            List<List<string>> stockTable =
-                                financePage.DocumentNode.SelectSingleNode("//table")
-                                                        .Descendants("tr")
-                                                        .Skip(1)
-                                                        .Where(tr => tr.Elements("td").Count() > 1)
-                                                        .Select(tr => tr.Elements("td").Select(td => td.InnerText.Trim()).ToList())
-                                                        .ToList();
-            driver.Quit();
-            Console.WriteLine("Code Works- Retrieved");
-            //return stockTable;
-        }
-    }
-}
