--- a/BlazorScraper/Shared/NavMenu.razor
+++ b/BlazorScraper/Shared/NavMenu.razor
@@ -29,7 +29,7 @@
         </li>
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="scraper">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Web Scraper
+                <span class="oi oi-dollar" aria-hidden="true"></span> Web Scraper
             </NavLink>
 
         </li>
