renamed namespace and copied a new razor page.

--- a/BlazorScraper/Pages/Scraper.razor
+++ b/BlazorScraper/Pages/Scraper.razor
@@ -5,7 +5,9 @@
 
 <h3>Scape!!</h3>
 <div class="container">
-    <button class="btn btn-primary" href="RestSharp">Rest Sharp</button>
+    <form action="/RestSharp">
+        <button type="submit" value="RestSharp" />
+    </form>
 </div>
 
 
