added button in nav bar changed color in nav menu

--- a/BlazorScraper/Shared/MainLayout.razor
+++ b/BlazorScraper/Shared/MainLayout.razor
@@ -6,8 +6,8 @@
 
 <div class="main">
     <div class="top-row px-4">
+        <button class="btn btn-primary">Click me</button>
         <LoginDisplay />
-        <a href="https://docs.microsoft.com/en-us/aspnet/" target="_blank">About</a>
     </div>
 
     <div class="content px-4">
