--- a/BlazorScraper/Pages/Scraper.razor
+++ b/BlazorScraper/Pages/Scraper.razor
@@ -6,7 +6,7 @@
 <h3>Scape!!</h3>
 <div class="container">
     <form action="/RestSharp">
-        <button type="submit" value="RestSharp" />
+        <input class="btn btn-primary" type="submit" value="Rest Sharp" />
     </form>
 </div>
 
