--- a/BlazorScraper/wwwroot/css/site.css
+++ b/BlazorScraper/wwwroot/css/site.css
@@ -41,7 +41,7 @@ app {
 }
 
 .sidebar {
-    background-image: linear-gradient(180deg, rgb(5, 39, 103) 0%, #3a0647 70%);
+    background-image: linear-gradient(180deg, rgb(37, 28, 35) 0%, #1c251e 70%);
 }
 
 .sidebar .top-row {
